# Notiredt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  pyproject.toml  setup.py  simple_torch.py
csrc/: hello_world.cpp  lltm.cpp  lltm_gpu.cpp  mean_filter.cpp  mean_filter_cuda.cu  scheduling.cu  testing_cpp.cpp  testing_second_tensor.cpp  tiled_matmul.cu  vector_addition_sycl.cpp
notebooks/: guide.ipynb  test_json.ipynb
src/notiredt/: __init__.py  aliases.py
src/notiredt/cuda_kernel/: Blur.cu  RGBToGray.cu  cuda.h  cuda_utils.h  hello_world.c  layerNorm.cu  pageFaulting.cu  pointer.c  reduce_sum.cu  testExplicit.cpp  test_gridDim.cu  timer.h  vecAdd.cu
src/notiredt/kernel/: reduce_sum.py
src/notiredt/operations/: online_softmax.py
src/notiredt/torch_compile/: basic.py  test_eager.py  torchinductor_error.py
src/notiredt/triton_kernel/: act_kernels.py  act_layers.py  add.py  batchnorm_kernel.py  batchnorm_layer.py  dropout_kernel.py  dropout_layer.py  flash_attention.py  gptq_kernel.py  linear_kernel.py  reduce_sum.py  utils.py  vector_addition.py  workbench.py
src/notiredt/triton_layer/: linear_layer.py
src/notiredt/utils/: benchmark.py  tensor_utils.py  triton_utils.py
tests/: test_act_kernels.py  test_batch_norm.py  test_compile.py  test_dropout_layer.py  test_flashattention.py  test_linear_layer.py  test_mixed_precision.py  test_simple_rms_norm.py  test_swa.py  test_swap_dim.py  test_triton_utils.py  test_utils.py  triton_benchmark.py  utils.py
tests/benchmark/: profile_forward_kernel.sh  run_kernel_axis1.py
(+2 files in other folders)
